<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment_DetailRecipe"
    android:layout_margin="@dimen/activity_horizontal_margin">


    <LinearLayout
        android:id="@+id/linearLayout_recipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/actiity_default_padding">
        <EditText
            android:id="@+id/editTextRecipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="@string/newRecipeNameHint"
            android:inputType="textPersonName"
            android:autofillHints="@string/newRecipeNameHint" />


        <Button
            android:id="@+id/buttonSaveRecipe"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight=".1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/transparent"
            android:drawableEnd="@android:drawable/ic_menu_save" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout_categoryCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout_recipeName"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox_meat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_meat" />

            <CheckBox
                android:id="@+id/checkBox_fish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_fish" />

            <CheckBox
                android:id="@+id/checkBox_salad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_salad" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox_garnish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_garnish" />

            <CheckBox
                android:id="@+id/checkBox_breakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_breakfast" />

            <CheckBox
                android:id="@+id/checkBox_dessert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_dessert" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox_mainPlate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_mainPlate" />

            <CheckBox
                android:id="@+id/checkBox_soup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_soup" />

            <CheckBox
                android:id="@+id/checkBox_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_other" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/editTextRecipe"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/linearLayout_categoryCheckBox"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:padding="@dimen/actiity_default_padding"
        android:background="@drawable/edittext_background"
        android:gravity="start"
        android:hint="@string/newRecipe"
        android:inputType="textMultiLine"
        android:textSize="16sp" />

    <ScrollView
        android:id="@+id/scrollView_componentsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextRecipe"
        android:layout_marginTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:id="@+id/linearLayout_componentsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="horizontal">



                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/newComponentHint"
                        android:inputType="textPersonName"
                        android:layout_weight=".5"
                        android:textSize="16sp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:gravity="center"
                        android:hint="@string/newComponentVolumeHint"
                        android:inputType="textPersonName"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/p1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@color/transparent"
                        android:gravity="center"
                        android:text="@string/symbol_plus"
                        android:textColor="#226A00"
                        android:textSize="24sp" />

                </LinearLayout>
            </LinearLayout>
    </ScrollView>




</RelativeLayout>
